--- a/productos.html
+++ b/productos.html
@@ -152,19 +152,19 @@
                         <div class="blog__item">
                             <div class="blog__inner">
                                 <div class="blog__thumb">
-                                    <a href="blog-single.html"><img src="assets/images/blog/home/01.jpg" alt="blog thumb" /></a>
-                                    <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span>
+                                    <a href="productos.html"><img src="assets/images/blog/home/producto1.png" alt="blog thumb" /></a>
+                                    <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
-                                    <div class="blog__meta">
+                                    <!-- <div class="blog__meta">
                                         <ul>
                                             <li><i class="fa-solid fa-user"></i> Admin</li>
                                             <li><i class="fa-solid fa-message"></i> 11 Comments</li>
                                         </ul>
-                                    </div>
-                                    <h4><a href="blog-single.html">tips Achieving Success in our Business</a></h4>
-                                    <p>Uere are full service engage is compan provide solution for employee needs…</p>
-                                    <a href="blog-single.html" class="read-more">Read More</a>
+                                    </div> -->
+                                    <h4><a href="productos.html">Bolsas negras</a></h4>
+                                    <p></p>
+                                    <!-- <a href="productos.html" class="read-more">Read More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -173,19 +173,19 @@
                         <div class="blog__item">
                             <div class="blog__inner">
                                 <div class="blog__thumb">
-                                    <a href="blog-single.html"><img src="assets/images/blog/home/02.jpg" alt="blog thumb" /></a>
-                                    <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span>
+                                    <a href="productos.html"><img src="assets/images/blog/home/producto2.png" alt="blog thumb" /></a>
+                                    <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
-                                    <div class="blog__meta">
+                                    <!-- <div class="blog__meta">
                                         <ul>
                                             <li><i class="fa-solid fa-user"></i> Admin</li>
                                             <li><i class="fa-solid fa-message"></i> 13 Comments</li>
                                         </ul>
-                                    </div>
-                                    <h4><a href="blog-single.html">Changing Grow Business Faster and Better</a></h4>
-                                    <p>Rere are full service engage is compan provide solution for employee needs…</p>
-                                    <a href="blog-single.html" class="read-more">Read More</a>
+                                    </div> -->
+                                    <h4><a href="productos.html">Bolsas negras</a></h4>
+                                    <p></p>
+                                    <!-- <a href="productos.html" class="read-more">Read More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -194,19 +194,19 @@
                         <div class="blog__item">
                             <div class="blog__inner">
                                 <div class="blog__thumb">
-                                    <a href="blog-single.html"><img src="assets/images/blog/home/03.jpg" alt="blog thumb" /></a>
-                                    <span class="date"><i class="fa-solid fa-calendar-days"></i> 25 april 2022</span>
+                                    <a href="productos.html"><img src="assets/images/blog/home/producto3.png" alt="blog thumb" /></a>
+                                    <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 25 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
-                                    <div class="blog__meta">
+                                    <!-- <div class="blog__meta">
                                         <ul>
                                             <li><i class="fa-solid fa-user"></i> Admin</li>
                                             <li><i class="fa-solid fa-message"></i> 18 Comments</li>
                                         </ul>
-                                    </div>
-                                    <h4><a href="blog-single.html">Employee development is company’s success</a></h4>
-                                    <p>Here are full service engage is compan provide solution for employee needs…</p>
-                                    <a href="blog-single.html" class="read-more">Read More</a>
+                                    </div> -->
+                                    <h4><a href="productos.html">Cintas de Embalaje</a></h4>
+                                    <p></p>
+                                    <!-- <a href="productos.html" class="read-more">Read More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -215,19 +215,19 @@
                         <div class="blog__item">
                             <div class="blog__inner">
                                 <div class="blog__thumb">
-                                    <a href="blog-single.html"><img src="assets/images/blog/home/04.jpg" alt="blog thumb" /></a>
-                                    <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span>
+                                    <a href="productos.html"><img src="assets/images/blog/home/producto4.png" alt="blog thumb" /></a>
+                                    <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
-                                    <div class="blog__meta">
+                                    <!-- <div class="blog__meta">
                                         <ul>
                                             <li><i class="fa-solid fa-user"></i> Admin</li>
                                             <li><i class="fa-solid fa-message"></i> 11 Comments</li>
                                         </ul>
-                                    </div>
-                                    <h4><a href="blog-single.html">Training and Consulting Services for You</a></h4>
-                                    <p>Uere are full service engage is compan provide solution for employee needs…</p>
-                                    <a href="blog-single.html" class="read-more">Read More</a>
+                                    </div> -->
+                                    <h4><a href="productos.html">Cintas de Embalaje</a></h4>
+                                    <p></p>
+                                    <!-- <a href="productos.html" class="read-more">Read More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -236,19 +236,20 @@
                         <div class="blog__item">
                             <div class="blog__inner">
                                 <div class="blog__thumb">
-                                    <a href="blog-single.html"><img src="assets/images/blog/home/05.jpg" alt="blog thumb" /></a>
-                                    <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span>
+                                    <a href="productos.html"><img src="assets/images/blog/home/producto5.jpeg" alt="blog thumb" /></a>
+                                    <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
-                                    <div class="blog__meta">
+                                    <!-- <div class="blog__meta">
                                         <ul>
                                             <li><i class="fa-solid fa-user"></i> Admin</li>
                                             <li><i class="fa-solid fa-message"></i> 13 Comments</li>
                                         </ul>
-                                    </div>
-                                    <h4><a href="blog-single.html">Strategies Rere Manage Financial Forecast</a></h4>
-                                    <p>Rere are full service engage is compan provide solution for employee needs…</p>
-                                    <a href="blog-single.html" class="read-more">Read More</a>
+                                    </div> -->
+                                    <h4><a href="productos.html">Mangas de 2 y 3 metros</a></h4>
+                                    <p>- Negras</p>
+                                    <p>- Transparentes</p>
+                                    <!-- <a href="productos.html" class="read-more">Read More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -257,82 +258,19 @@
                         <div class="blog__item">
                             <div class="blog__inner">
                                 <div class="blog__thumb">
-                                    <a href="blog-single.html"><img src="assets/images/blog/home/06.jpg" alt="blog thumb" /></a>
-                                    <span class="date"><i class="fa-solid fa-calendar-days"></i> 25 april 2022</span>
+                                    <a href="productos.html"><img src="assets/images/blog/home/producto6.jpeg" alt="blog thumb" /></a>
+                                    <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 25 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
-                                    <div class="blog__meta">
+                                    <!-- <div class="blog__meta">
                                         <ul>
                                             <li><i class="fa-solid fa-user"></i> Admin</li>
                                             <li><i class="fa-solid fa-message"></i> 18 Comments</li>
                                         </ul>
-                                    </div>
-                                    <h4><a href="blog-single.html">Trademark protecton with Audit and Monitoring</a></h4>
-                                    <p>Here are full service engage is compan provide solution for employee needs…</p>
-                                    <a href="blog-single.html" class="read-more">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 col-12">
-                        <div class="blog__item">
-                            <div class="blog__inner">
-                                <div class="blog__thumb">
-                                    <a href="blog-single.html"><img src="assets/images/blog/home/07.jpg" alt="blog thumb" /></a>
-                                    <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span>
-                                </div>
-                                <div class="blog__content">
-                                    <div class="blog__meta">
-                                        <ul>
-                                            <li><i class="fa-solid fa-user"></i> Admin</li>
-                                            <li><i class="fa-solid fa-message"></i> 11 Comments</li>
-                                        </ul>
-                                    </div>
-                                    <h4><a href="blog-single.html">Narrow Focus in Prevent Over analysis</a></h4>
-                                    <p>Uere are full service engage is compan provide solution for employee needs…</p>
-                                    <a href="blog-single.html" class="read-more">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 col-12">
-                        <div class="blog__item">
-                            <div class="blog__inner">
-                                <div class="blog__thumb">
-                                    <a href="blog-single.html"><img src="assets/images/blog/home/08.jpg" alt="blog thumb" /></a>
-                                    <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span>
-                                </div>
-                                <div class="blog__content">
-                                    <div class="blog__meta">
-                                        <ul>
-                                            <li><i class="fa-solid fa-user"></i> Admin</li>
-                                            <li><i class="fa-solid fa-message"></i> 13 Comments</li>
-                                        </ul>
-                                    </div>
-                                    <h4><a href="blog-single.html">What Makes A Financial Marketing Strategy?</a></h4>
-                                    <p>Rere are full service engage is compan provide solution for employee needs…</p>
-                                    <a href="blog-single.html" class="read-more">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 col-12">
-                        <div class="blog__item">
-                            <div class="blog__inner">
-                                <div class="blog__thumb">
-                                    <a href="blog-single.html"><img src="assets/images/blog/home/09.jpg" alt="blog thumb" /></a>
-                                    <span class="date"><i class="fa-solid fa-calendar-days"></i> 25 april 2022</span>
-                                </div>
-                                <div class="blog__content">
-                                    <div class="blog__meta">
-                                        <ul>
-                                            <li><i class="fa-solid fa-user"></i> Admin</li>
-                                            <li><i class="fa-solid fa-message"></i> 18 Comments</li>
-                                        </ul>
-                                    </div>
-                                    <h4><a href="blog-single.html">Within the construction industry as overdraft</a></h4>
-                                    <p>Here are full service engage is compan provide solution for employee needs…</p>
-                                    <a href="blog-single.html" class="read-more">Read More</a>
+                                    </div> -->
+                                    <h4><a href="productos.html">Bobina en extrusión</a></h4>
+                                    <p></p>
+                                    <!-- <a href="productos.html" class="read-more">Read More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -411,8 +349,8 @@
                                             <a href="blog-sing.html"><img src="assets/images/blog/recentpost/01.jpg" alt="recentpost" /></a>
                                         </div>
                                         <div class="content">
-                                            <h6><a href="blog-single.html">Employe development is company’s</a></h6>
-                                            <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span>
+                                            <h6><a href="productos.html">Employe development is company’s</a></h6>
+                                            <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span> -->
                                         </div>
                                     </li>
                                     <li>
@@ -420,8 +358,8 @@
                                             <a href="blog-sing.html"><img src="assets/images/blog/recentpost/01.jpg" alt="recentpost" /></a>
                                         </div>
                                         <div class="content">
-                                            <h6><a href="blog-single.html">Should fixing take 100  corporate steps.</a></h6>
-                                            <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span>
+                                            <h6><a href="productos.html">Should fixing take 100  corporate steps.</a></h6>
+                                            <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span> -->
                                         </div>
                                     </li>
                                 </ul>
