--- a/contact.html
+++ b/contact.html
@@ -159,7 +159,7 @@
                                 <h5>Dirección</h5>
                                 <p>
                                     <a href="https://www.google.com/maps/place/Av.+Salesianos+725,+8900226+San+Miguel,+Regi%C3%B3n+Metropolitana/@-33.4942989,-70.6431258,17z/data=!3m1!4b1!4m6!3m5!1s0x9662dab666fc715b:0xa0ac2578caf4214d!8m2!3d-33.4942989!4d-70.6431258!16s%2Fg%2F11gr7t8k7b?entry=ttu" target="_blank">
-                                        Av. Francisco Bilbao Nº2934, Providencia
+                                        Salesianos 725, San Miguel, Santiago, Chile
                                     </a>
                                 </p>
                             </div>
