--- a/contact.html
+++ b/contact.html
@@ -43,11 +43,11 @@
                             <ul>
                                 <li>
                                     <img src="assets/images/header/icon/05.png" alt="icon" />
-                                    <span>Salesianos 725, San Miguel, Santiago, Chile</span>
+                                    <span>Salvador Allende 725, San Miguel, Santiago, Chile</span>
                                 </li>
                                 <li>
                                     <img src="assets/images/header/icon/04.png" alt="icon" />
-                                    <span>(56 9) 32302270</span>
+                                    <span> +56 2 32302270</span>
                                 </li>
                             </ul>
                         </div>
@@ -159,7 +159,7 @@
                                 <h5>Dirección</h5>
                                 <p>
                                     <a href="https://www.google.com/maps/place/Av.+Salesianos+725,+8900226+San+Miguel,+Regi%C3%B3n+Metropolitana/@-33.4942989,-70.6431258,17z/data=!3m1!4b1!4m6!3m5!1s0x9662dab666fc715b:0xa0ac2578caf4214d!8m2!3d-33.4942989!4d-70.6431258!16s%2Fg%2F11gr7t8k7b?entry=ttu" target="_blank">
-                                        Salesianos 725, San Miguel, Santiago, Chile
+                                        Salvador Allende 725, San Miguel, Santiago, Chile
                                     </a>
                                 </p>
                             </div>
@@ -183,7 +183,7 @@
                             </div>
                             <div class="information__content">
                                 <h5>Teléfono</h5>
-                                <p><a href="tel:+56932302270">(56 9) 32302270</a></p>
+                                <p><a href="tel:+56932302270"> +56 2 32302270</a></p>
                             </div>
                         </div>
                     </div>
