--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                             <ul>
                                 <li>
                                     <img src="assets/images/header/icon/05.png" alt="icon" />
-                                    <span>Salesianos 725, San Miguel, Santiago, Chile</span>
+                                    <span>Salvador Allende 725, San Miguel, Santiago, Chile</span>
                                 </li>
                                 <li>
                                     <img src="assets/images/header/icon/04.png" alt="icon" />
-                                    <span>(56 9) 32302270</span>
+                                    <span> +56 2 32302270</span>
                                 </li>
                             </ul>
                         </div>
@@ -255,7 +255,7 @@
 
 
 
-    <!-- ==========Feature Section Starts Here========== -->
+    <!-- ==========Feature Section Starts Here==========
     <div class="feature padding-tb">
         <div class="container">
             <div class="feature__area">
@@ -308,12 +308,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- ==========Feature Section Ends Here========== -->
 
 
 
-    <!-- ==========About Section Starts Here========== -->
+    <!-- ==========About Section Starts Here==========
     <div class="about padding-tb">
         <div class="container">
             <div class="row g-5">
@@ -368,12 +368,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- ==========About Section Ends Here========== -->
 
 
 
-    <!-- ==========Services Section Starts Here========== -->
+    <!-- ==========Services Section Starts Here==========
     <div class="service bg-color padding-tb">
         <div class="container">
             <div class="section__header text-center">
@@ -439,13 +439,13 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- ==========Services Section Ends Here========== -->
 
 
 
 
-    <!-- ==========Team Member Section Starts Here========== -->
+    <!-- ==========Team Member Section Starts Here==========
     <div class="teamMember padding-tb">
         <div class="container">
             <div class="section__header text-center">
@@ -537,13 +537,13 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- ==========Team Member Section Ends Here========== -->
 
 
 
 
-    <!-- ==========Call A Action Section Starts Here========== -->
+    <!-- ==========Call A Action Section Starts Here==========
     <div class="callAaction padding-tb bg-img" style="background-image: url(assets/images/bg/01.jpg);">
         <div class="container">
             <div class="row g-4">
@@ -576,14 +576,14 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- ==========Call A Action Section Ends Here========== -->
 
 
 
 
 
-    <!-- ==========Work Section Starts Here========== -->
+    <!-- ==========Work Section Starts Here==========
     <div class="work padding-tb">
         <div class="container">
             <div class="section__header text-center">
@@ -637,12 +637,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- ==========Work Section Ends Here========== -->
 
 
 
-    <!-- ==========Project Section Starts Here========== -->
+    <!-- ==========Project Section Starts Here==========
     <div class="project mb-none-120">
         <div class="container-fluid">
             <div class="project__slider overflow-hidden">
@@ -720,11 +720,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- ==========Project Section Ends Here========== -->
 
 
-    <!-- ==========Testimonial Section Starts Here========== -->
+    <!-- ==========Testimonial Section Starts Here==========
     <div class="testimonial padding-tb bg-img" style="background-image: url(assets/images/bg/02.jpg);">
         <div class="testimonial__area">
             <div class="container">
@@ -808,12 +808,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- ==========Testimonial Section Ends Here========== -->
 
 
 
-    <!-- ==========Sponsor Section Starts Here========== -->
+    <!-- ==========Sponsor Section Starts Here==========
     <div class="sponsor">
         <div class="container">
             <div class="sponsor__slider overflow-hidden">
@@ -856,13 +856,13 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- ==========Sponsor Section Ends Here========== -->
 
 
 
 
-    <!-- ==========Blog Section Starts Here========== -->
+    <!-- ==========Blog Section Starts Here==========
     <div class="blog home padding-tb bg-color">
         <div class="container">
             <div class="section__header text-center">
@@ -937,7 +937,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- ==========Blog Section Ends Here========== -->
 
 
