--- a/productos.html
+++ b/productos.html
@@ -43,11 +43,11 @@
                             <ul>
                                 <li>
                                     <img src="assets/images/header/icon/05.png" alt="icon" />
-                                    <span>Salesianos 725, San Miguel, Santiago, Chile</span>
+                                    <span>Salvador Allende 725, San Miguel, Santiago, Chile</span>
                                 </li>
                                 <li>
                                     <img src="assets/images/header/icon/04.png" alt="icon" />
-                                    <span>(56 9) 32302270</span>
+                                    <span> +56 2 32302270</span>
                                 </li>
                             </ul>
                         </div>
