--- a/contact.html
+++ b/contact.html
@@ -194,7 +194,7 @@
                             </div>
                             <div class="information__content">
                                 <h5>Horario</h5>
-                                <p>Lunes - Viernes <br /> 8:30am a 14:00 - 15:00 a 16:30pm</p>
+                                <p>Lunes - Viernes <br /> 8:30am a 14:00 </p>
                             </div>
                         </div>
                     </div>
