--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -194,7 +194,7 @@
                                 <div class="misson__content">
                                     <h4>Misión</h4>
                                     <p>Sabraplas, es una fábrica que procesa productos plásticos, en su mayoría productos de  material reciclado, lo cual nos lleva a contribuir con el medio ambiente, lo que nos permite  poder entregar un nuevo uso que llega a sus hogares e industrias en productos de aseo,  desde nuestros inicios nos ha preocupado el desarrollo sustentable de la industria plastica,  a través de la promoción del uso correcto y responsable de nuestros productos.</p>
-                                    <p>Contribuyendo así a la defensa y protección del medio ambiente y a la mejora en la calidad  de vida del planeta.</p>
+                                    <p>Contribuyendo así, a la defensa y protección del medio ambiente y a la mejora en la calidad  de vida del planeta.</p>
                                     <!-- <ul>
                                         <li><i class="fa-solid fa-circle-check"></i> Appropriately empower dynamic leadership.</li>
                                         <li><i class="fa-solid fa-circle-check"></i> Here’s what they have to say about us.</li>
@@ -209,11 +209,17 @@
                         <div class="misson__item">
                             <div class="misson__inner">
                                 <div class="misson__thumb">
-                                    <img src="assets/images/misson/03.jpg" alt="rajibraj" />
+                                    <img src="assets/images/misson/valores.png" alt="rajibraj" />
                                 </div>
                                 <div class="misson__content">
                                     <h4>Valores</h4>
-                                    <p>Orientación al Cliente, excelencia en los productos, confianza con nuestros Clientes, agilidad  y flexibilidad de una estructura eficiente y ajustada, especialización en la tecnología de  nuestros procesos, preocupados por el medio ambiente y lealtad con un equipo estable como factor de éxito, son los Valores que en procesos plásticos nos motivan y ayudan a  seguir comprometiéndonos con nuestros actuales y futuros Clientes.</p>
+                                    <p>- Orientación al Cliente.
+                                       - Excelencia en los productos.
+                                       - Confianza con nuestros Clientes.
+                                       - Agilidad y flexibilidad de una estructura eficiente y ajustada.
+                                       - Especialización en la tecnología de  nuestros procesos.
+
+                                       Preocupados por el medio ambiente y lealtad con un equipo estable como factor de éxito, son los Valores que en procesos plásticos nos motivan y ayudan a  seguir comprometiéndonos con nuestros actuales y futuros Clientes.</p>
                                     <!-- <ul>
                                         <li><i class="fa-solid fa-circle-check"></i> Appropriately empower dynamic leadership.</li>
                                         <li><i class="fa-solid fa-circle-check"></i> Here’s what they have to say about us.</li>
@@ -253,7 +259,7 @@
 
 
 
-    <!-- ==========History Section Starts Here========== 
+    <!-- ==========History Section Starts Here==========
     <div class="history padding-tb bg-color">
         <div class="container">
             <div class="section__header"></div>
@@ -324,7 +330,7 @@
 
 
 
-    <!-- ==========Feature Section Starts Here========== -->
+    <!-- ==========Feature Section Starts Here==========
     <div class="feature feature__two padding-tb">
         <div class="container">
             <div class="section__header text-center">
@@ -391,7 +397,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- ==========Feature Section Ends Here========== -->
 
 
