--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 <div class="menu">
                                     <ul>
                                         <li>
-                                            <a href="index.html" class="active">Inicios</a>
+                                            <a href="index.html" class="active">Inicio</a>
                                         </li>
                                         <li>
                                             <a href="quienes_somos.html">Quienes Somos</a>
