--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -213,13 +213,13 @@
                                 </div>
                                 <div class="misson__content">
                                     <h4>Valores</h4>
-                                    <p>- Orientación al Cliente.
-                                       - Excelencia en los productos.
-                                       - Confianza con nuestros Clientes.
-                                       - Agilidad y flexibilidad de una estructura eficiente y ajustada.
-                                       - Especialización en la tecnología de  nuestros procesos.
+                                    <p>- Orientación al Cliente.</p>
+                                    <p>- Excelencia en los productos.</p>
+                                    <p>- Confianza con nuestros Clientes.</p>
+                                    <p>- Agilidad y flexibilidad de una estructura eficiente y ajustada.</p>
+                                    <p>- Especialización en la tecnología de  nuestros procesos.</p>
 
-                                       Preocupados por el medio ambiente y lealtad con un equipo estable como factor de éxito, son los Valores que en procesos plásticos nos motivan y ayudan a  seguir comprometiéndonos con nuestros actuales y futuros Clientes.</p>
+                                    <p>Preocupados por el medio ambiente y lealtad con un equipo estable como factor de éxito, son los Valores que en procesos plásticos nos motivan y ayudan a  seguir comprometiéndonos con nuestros actuales y futuros Clientes.</p>
                                     <!-- <ul>
                                         <li><i class="fa-solid fa-circle-check"></i> Appropriately empower dynamic leadership.</li>
                                         <li><i class="fa-solid fa-circle-check"></i> Here’s what they have to say about us.</li>
