--- a/noticias.html
+++ b/noticias.html
@@ -143,7 +143,7 @@
 
 
 
-    <!-- ==========Blog Section Starts Here========== -->
+    <!-- ==========Blog Section Starts Here==========
     <div class="blog home blog--classic padding-tb">
         <div class="container">
             <div class="section__wrapper">
@@ -381,7 +381,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- ==========Blog Section Ends Here========== -->
 
 
