--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
     <!-- ==========Header Section Starts Here========== -->
-    <header class="header header__one">
+    <header class="header header__one header__three">
         <div class="header__top">
             <div class="container">
                 <div class="row align-items-center">
